tests/errors/semantic/blocking/DECORATOR_WRONG_NUMBER_TYPES.py
from pyccel.decorators import types


@types('int')
def func(n,m):
    return n + m
